--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,6 +5,6 @@ copy.src.target=
 debug.url=DEFAULT_URL
 index.file=index.php
 remote.connection=mattresszombie-fcce81
-remote.upload=ON_SAVE
+remote.upload=ON_RUN
 run.as=REMOTE
 url=http://www.mattresszombie.com
